Bug 79458 - [WK2][Qt] Fix compilation without QtWidgets
Summary: [WK2][Qt] Fix compilation without QtWidgets
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Simon Hausmann
URL:
Keywords:
: 81938 (view as bug list)
Depends on: 80854
Blocks: 78109
  Show dependency treegraph
 
Reported: 2012-02-24 00:19 PST by Simon Hausmann
Modified: 2012-03-30 00:23 PDT (History)
5 users (show)

See Also:


Attachments
Patch (7.30 KB, patch)
2012-03-18 08:33 PDT, Simon Hausmann
vestbo: review+
buildbot: commit-queue-
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Hausmann 2012-02-24 00:19:02 PST
As pointed our by Yael, qquickwebview.cpp uses QFileDialog, which requires the use of QT += widgets when compiling the WebKit2 static library.

We should delegate all Widget dependencies into the WebKit1 static library and use them from the WK2 one (that means building WK1 before WK2).

The intermediate goal is to compile WebCore and WK2 without Widgets, regardless of the fact that the resulting shared library has a dependency to QtWidgets. By avoiding the dependency in those two static libraries we reduce the risk of accidentally introducing new dependencies.
Comment 1 Simon Hausmann 2012-03-18 08:33:43 PDT
Created attachment 132492 [details]
Patch
Comment 2 Build Bot 2012-03-19 12:35:21 PDT
Comment on attachment 132492 [details]
Patch

Attachment 132492 [details] did not pass win-ews (win):
Output: http://queues.webkit.org/results/11981852
Comment 3 Simon Hausmann 2012-03-26 08:07:01 PDT
Committed r112093: <http://trac.webkit.org/changeset/112093>
Comment 4 Balazs Kelemen 2012-03-27 10:06:20 PDT
One more place where QApplication::wheelScrollLines is used (actually compiles but makes minibrowser --desktop not react on wheel scroll): https://bugs.webkit.org/show_bug.cgi?id=81938. r? :)
Comment 5 Simon Hausmann 2012-03-30 00:23:33 PDT
*** Bug 81938 has been marked as a duplicate of this bug. ***