[WK2][Qt] Fix compilation without QtWidgets https://bugs.webkit.org/show_bug.cgi?id=79458

Reviewed by Tor Arne Vestbø.

* Shared/qt/WebEventFactoryQt.cpp:
(WebKit::WebEventFactory::createWebWheelEvent): Replace use of QApplication::wheelScrollLines()
with the constant that is actually used and usually not changed anyway.
* Target.pri: Remove widgets from Qt variable.
* UIProcess/qt/QtWebPageEventHandler.cpp: Remove unecessary include.
* WebProcess.pro: Use widgets for the process (for the time being).
* WebProcess/qt/WebProcessMainQt.cpp: Delegate QApplication creation to the caller.
(WebKit::WebProcessMainQt):
* qt/MainQt.cpp: Create QApplication here.
(WebKit):
(main):

Canonical link: https://commits.webkit.org/99536@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112093 268f45cc-cd09-0410-ab3c-d52691b4dbfc