Source/WebKit2/qt/MainQt.cpp
@@ -24,11 +24,23 @@
  * THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#include <QtGlobal>
+#include <QApplication>
+
+#include <stdio.h>
 
 namespace WebKit {
-Q_DECL_IMPORT int WebProcessMainQt(int argc, char** argv);
+Q_DECL_IMPORT int WebProcessMainQt(QGuiApplication*);
 Q_DECL_IMPORT void initializeWebKit2Theme();
+}
+
+static void messageHandler(QtMsgType type, const char* message)
+{
+    if (type == QtCriticalMsg) {
+        fprintf(stderr, "%s\n", message);
+        return;
+    }
+
+    // Do nothing
 }
 
 // The framework entry point.
@@ -37,5 +49,12 @@ Q_DECL_IMPORT void initializeWebKit2Theme();
 int main(int argc, char** argv)
 {
     WebKit::initializeWebKit2Theme();
-    return WebKit::WebProcessMainQt(argc, argv);
+
+    // Has to be done before QApplication is constructed in case
+    // QApplication itself produces debug output.
+    QByteArray suppressOutput = qgetenv("QT_WEBKIT_SUPPRESS_WEB_PROCESS_OUTPUT");
+    if (!suppressOutput.isEmpty() && suppressOutput != "0")
+        qInstallMsgHandler(messageHandler);
+
+    return WebKit::WebProcessMainQt(new QApplication(argc, argv));
 }
